# xia

./: README  howto-setup-xia.txt
1.0/: Makefile.am  TODO  configure.ac
1.0-rc1/: configure.ac
1.0-rc1/databases/: core.sql  populate_db.sql
1.0-rc1/include/xia/: session_msg.h
1.0-rc1/lib/: Makefile.am  event.c  event.h  hash.c  hash.h  hooklet.c  hooklet.h  ion.h  ion_epoll.c  ion_kqueue.c  journal.c  journal.h  netbus.c  netbus.h  options.c  options.h  sched.c  sched.h  utils.c  xiap.c
1.0-rc1/plugins/: Makefile.am  openvpn.c
1.0-rc1/xia-agent/: Makefile.am  acl.c  acl.h  bridge.c  capture.c  configure.ac  dhcp.c  discovery.c  discovery.h  main.c  pingring.c  reslist.c  reslist.h
1.0-rc1/xiad/: acl.c  acl.h  bridge.c  bridge.h  configure.ac  dbal.c  dbal.h  discovery.c  main.c  muxia.c  muxia.h  session.c  session.h
1.0-rc1/xiad/hooklets/: Makefile.am  ipset.c  mysql.c
1.0-rc1/xiad/tools/: acl_msg.c  discovery_msg.c  session_msg.c
1.0-rc2/: TODO  configure.ac
1.0-rc2/databases/: generate_db.sh
1.0-rc2/include/xia/: acl_msg.h  bridge_msg.h  discovery_msg.h  xiap.h
1.0-rc2/lib/: event.c  hooklet.c  ion_kqueue.c  journal.c  journal.h  netbus.c  netbus.h  options.c  sched.c  utils.c  utils.h
1.0-rc2/plugins/: openvpn.c
1.0-rc2/xia-agent/: acl.c  bridge.c  capture.c  configure.ac  dhcp.c  discovery.c  main.c  pingring.c  pingring.h  reslist.c
1.0-rc2/xiad/: acl.c  bridge.c  configure.ac  dbal.c  discovery.c  main.c  muxia.c  session.c
1.0-rc2/xiad/hooklets/: mysql.c
1.0-rc2/xiad/tools/: discovery_msg.c  session_msg.c
1.0-rc3/: Makefile.am  configure.ac
1.0-rc3/include/xia/: acl_msg.h  bridge_msg.h  discovery_msg.h  session_msg.h
1.0-rc3/lib/: event.c  journal.h  utils.h
1.0-rc3/xia-agent/: Makefile.am  acl.c  bridge.c  configure.ac  discovery.c  kalive.c  kalive.h  main.c  reslist.c  sniffer.c  sniffer.h
1.0-rc3/xiad/: Makefile.am  acl.c  configure.ac  dbal.c  discovery.c  discovery.h  main.c  muxia.c  xiad.conf
1.0/lib/: hooklet.c  ion_epoll.c  netbus.c
1.0/xia-agent/: Makefile.am  bridge.c  configure.ac  dhcp.c  main.c  pingring.c  reslist.h
1.0/xiad/: Makefile.am  bridge.c  configure.ac  muxia.c  pfctl.rules  xiad.conf.in
1.0/xiad/databases/: core.sql  populate_db.sql
1.0/xiad/hooklets/: Makefile.am  mysql.c
1.0/xiad/tools/: Makefile.am  session_msg.c
1.0rc4/: TODO  configure.ac
1.0rc4/lib/: ion_epoll.c  netbus.c  netbus.h  utils.c
1.0rc4/xia-agent/: Makefile.am  acl.c  configure.ac  dhcp.c  pingring.c  pingring.h
1.0rc4/xiad/: Makefile.am  configure.ac
1.0rc4/xiad/tools/: Makefile.am
1.0rc5/: COPYRIGHTS  configure.ac
1.0rc5/databases/: core.sql
1.0rc5/xia-agent/: configure.ac  discovery.c
1.0rc5/xiad/: acl.c  configure.ac  main.c  session.c
1.0rc5/xiad/hooklets/: Makefile.am
1.0rc5/xiad/tools/: acl_msg.c
1.0rc6/: configure.ac
1.0rc6/include/xia/: xiap.h
1.0rc6/lib/: hooklet.c  netbus.c  sched.c
1.0rc6/xia-agent/: configure.ac
1.0rc6/xiad/: Makefile.am  configure.ac
1.0rc7/: configure.ac
1.0rc7/lib/: Makefile.am  TODO  hash.c  hooklet.h  ion_kqueue.c  netbus.h  utils.c  xiap.h
1.0rc7/plugins/: Makefile.am
1.0rc7/xia-agent/: configure.ac  xia-agent.conf
1.0rc7/xiad/: Makefile.am  configure.ac  discovery.c  muxia.c
1.0rc7/xiad/databases/: core.sql  generate_db.sh
1.0rc7/xiad/hooklets/: Makefile.am  mysql.c  pfctl.c
1.0rc7/xiad/tools/: acl_msg.c  discovery_msg.c
1.1-ALPHA/plugins/: openvpn.c
1.1-ALPHA/xia-agent/: Makefile.am  configure.ac
1.1-ALPHA/xia-agent/src/: Makefile.am  acl.c  bridge.c  capture.c  capture.h  dhcp.c  discovery.c  kalive.c  main.c  pingring.c  pingring.h  reslist.c  reslist.h  sniffer.c
1.1-ALPHA/xia-dnds/: Makefile.am  configure.ac  xia-dnds.conf.in
1.1-ALPHA/xia-dnds/databases/: acl.sql  acl_group.sql  addr_pool.sql  context.sql  generate_db.sh  host.sql  init.sql  node.sql  peer.sql  perm.sql  user.sql
1.1-ALPHA/xia-dnds/src/: Makefile.am  dbal.c  dbal.h  dnds.c  dnds.h  main.c  mgmt.c  mgmt.h  obj_acl.c  obj_acl.h  switch.c  switch.h
1.1-ALPHA/xia-dnds/src/dbal/: Makefile.am
1.1-ALPHA/xia-dnds/src/hooklets/: Makefile.am  mysql.c
1.1-ALPHA/xia-dnds/tools/: Makefile.am  client.c
1.1-ALPHA/xia-libs/: Makefile.am  configure.ac
1.1-ALPHA/xia-libs/config/: xia-libs.pc.in
1.1-ALPHA/xia-libs/src/: Makefile.am  bridge.h  bridge_brconfig.c  bridge_brctl.c  dnds.c  dnds.h  event.c  event.h  hash.h  hooklet.c  hooklet.h  ion.h  ion_epoll.c  ion_kqueue.c  journal.c  journal.h  mbuf.c  mbuf.h  netbus.c  netbus.h  options.c  options.h  sched.c  sched.h  tun.h  tun_ifreq.c  tun_tuninfo.c  utils.c  utils.h  xsm.c  xsm.h  xtp.c  xtp.h
1.1-ALPHA/xia-skeleton/: Makefile.am  TODO  configure.ac  xia-skeleton.conf
1.1-ALPHA/xia-skeleton/src/: Makefile.am  main.c
1.1-ALPHA/xia-ssl/: Makefile.am  configure.ac
1.1-ALPHA/xia-ssl/src/: Makefile.am  client.c  client.h  main.c  server.c  server.h  ssl.c  ssl.h
1.1-ALPHA/xia-switch/: Makefile.am  TODO  configure.ac
1.1-ALPHA/xia-switch/src/: Makefile.am  context.c  context.h  dbal.c  dbal.h  fib.c  fib.h  inet.c  inet.h  ippool.c  ippool.h  main.c  switch.c  switch.h
1.1-ALPHA/xia-switch/src/hooklets/: Makefile.am  ipset.c  mysql.c  pfctl.c
1.1-ALPHA/xia-switch/tools/: Makefile.am  client.c  client.h
misc/: named.conf.local
xia-software-suite-1.0rc5/: AUTHORS  Makefile.in  config.h.in  configure
xia-software-suite-1.0rc5/lib/: Makefile.in  netbus.c  xiap.c
xia-software-suite-1.0rc5/plugins/: Makefile.in
xia-software-suite-1.0rc5/xia-agent/: Makefile.in  config.h.in  configure  dhcp.h
xia-software-suite-1.0rc5/xiad/: Makefile.in  config.h.in  configure  xiad.conf
xia-software-suite-1.0rc5/xiad/hooklets/: Makefile.in  ipset.c  mysql.c
xia-software-suite-1.0rc5/xiad/tools/: Makefile.in
