#
# xiad/tools/Makefile.am
#

INCLUDES = -I../../include

bin_PROGRAMS = acl_msg session_msg discovery_msg

acl_msg_SOURCES = acl_msg.c
acl_msg_LDADD = ../../lib/libcore.a

session_msg_SOURCES = session_msg.c
session_msg_LDADD = ../../lib/libcore.a

discovery_msg_SOURCES = discovery_msg.c
discovery_msg_LDADD = ../../lib/libcore.a
